--- a/configs/COCO-Detection/yolov4.yaml
+++ b/configs/COCO-Detection/yolov4.yaml
@@ -25,28 +25,28 @@ backbone:
    [-1, 4, BottleneckCSP, [1024]],  # 10
   ]
 
-# YOLOv3 head
+# YOLOv3-SPP head
 head:
-  [[-1, 1, Bottleneck, [1024, False]],  # 11
+  [[-1, 1, Bottleneck, [1024, False]],
    [-1, 1, Conv, [512, 1, 1]],
    [-1, 1, SPP, [512, [5, 9, 13]]],
-   [-1, 1, Bottleneck, [1024, False]],
-   [-1, 1, Bottleneck, [1024, False]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 12 (P5/32-large)
+   [-1, 1, Conv, [1024, 3, 1]],
+   [-1, 1, Conv, [512, 1, 1]],
+   [-1, 1, Conv, [1024, 3, 1]],  # 16
 
-   [-3, 1, Conv, [256, 1, 1]],
+   [-1, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 8], 1, Concat, [1]],  # concat backbone P4
    [-1, 1, Bottleneck, [512, False]],
-   [-1, 2, Bottleneck, [512, False]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 18 (P4/16-medium)
+   [-1, 1, Bottleneck, [512, False]],
+   [-1, 1, Conv, [256, 1, 1]],
+   [-1, 1, Conv, [512, 3, 1]],  # 23
 
-   [-3, 1, Conv, [128, 1, 1]],
+   [-1, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 6], 1, Concat, [1]],  # concat backbone P3
    [-1, 1, Bottleneck, [256, False]],
-   [-1, 2, Bottleneck, [256, False]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 24 (P3/8-small)
+   [-1, 2, Bottleneck, [256, False]],  # 28
 
-   [[], 1, Detect, [number_classes, anchors]],   # Detect(P3, P4, P5)
+   [[28, 23, 16], 1, Detect, [number_classes, anchors]],   # Detect(P3, P4, P5)
   ]
