--- a/configs/PascalVOC-Detection/mobilenetv1.yaml
+++ b/configs/PascalVOC-Detection/mobilenetv1.yaml
@@ -43,13 +43,11 @@ backbone:
 # YOLOv3-tiny head
 head:
   [[-1, 1, Bottleneck, [512, False]],  # 27
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 28 (P5/32-large)
 
-   [-2, 1, Conv, [128, 1, 1]],
+   [-1, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 12], 1, Concat, [1]],  # concat backbone P4
-   [-1, 1, Conv, [256, 1, 1]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 33 (P4/16-medium)
+   [-1, 1, Conv, [256, 1, 1]],  # 31
 
-   [[], 1, Detect, [number_classes, anchors]],   # Detect(P4, P5)
+   [[31, 27], 1, Detect, [number_classes, anchors]],   # Detect(P4, P5)
   ]
