--- a/configs/PascalVOC-Detection/vgg16.yaml
+++ b/configs/PascalVOC-Detection/vgg16.yaml
@@ -33,23 +33,20 @@ backbone:
 
 # YOLOv3 head
 head:
-  [[-1, 1, Bottleneck, [1024, False]],  # 17
-   [-1, 2, Bottleneck, [1024, False]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 19 (P5/32-large)
+  [[-1, 1, Bottleneck, [1024, False]],
+   [-1, 2, Bottleneck, [1024, False]],  # 18
 
-   [-3, 1, Conv, [256, 1, 1]],
+   [-1, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 14], 1, Concat, [1]],  # concat backbone P4
    [-1, 1, Bottleneck, [512, False]],
-   [-1, 2, Bottleneck, [512, False]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 25 (P4/16-medium)
+   [-1, 2, Bottleneck, [512, False]],  # 23
 
-   [-3, 1, Conv, [128, 1, 1]],
+   [-1, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 9], 1, Concat, [1]],  # concat backbone P3
    [-1, 1, Bottleneck, [256, False]],
-   [-1, 2, Bottleneck, [256, False]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 31 (P3/8-small)
+   [-1, 2, Bottleneck, [256, False]],  # 28
 
-   [[], 1, Detect, [number_classes, anchors]],   # Detect(P3, P4, P5)
+   [[28, 23, 18], 1, Detect, [number_classes, anchors]],   # Detect(P3, P4, P5)
   ]
