--- a/configs/PascalVOC-Detection/yolov3-tiny.yaml
+++ b/configs/PascalVOC-Detection/yolov3-tiny.yaml
@@ -23,19 +23,17 @@ backbone:
    [-1, 1, Maxpool, [2, 2]],   # 9-P5/32
    [-1, 1, Conv, [512, 3, 1]],
 #  [-1, 1, Maxpool, [2, 1]], fix ` Expected more than 1 value per channel when training, got input size torch.Size([1, 1024, 1, 1])` error
-   [-1, 1, Conv, [1024, 3, 1]],
+   [-1, 1, Conv, [1024, 3, 1]],  # 11
   ]
 
 # YOLOv3-tiny head
 head:
   [[-1, 1, Bottleneck, [512, False]],  # 12
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 13 (P5/32-large)
 
-   [-2, 1, Conv, [128, 1, 1]],
+   [-1, 1, Conv, [128, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, "nearest"]],
    [[-1, 8], 1, Concat, [1]],  # concat backbone P4
-   [-1, 1, Conv, [256, 1, 1]],
-   [-1, 1, nn.Conv2d, [number_anchors * (number_classes + 5), 1, 1]],  # 18 (P4/16-medium)
+   [-1, 1, Conv, [256, 1, 1]],  # 16
 
-   [[], 1, Detect, [number_classes, anchors]],   # Detect(P4, P5)
+   [[16, 12], 1, Detect, [number_classes, anchors]],   # Detect(P4, P5)
   ]
